@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.11</version>
+		<version>2.7.9</version>
 		<relativePath/>
 		<!-- lookup parent from repository -->
 	</parent>
@@ -45,6 +45,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+		</dependency>
 		<!-- spring-boot-cache -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -69,9 +73,9 @@
 		</dependency>
 		<!-- mysql -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.0.33</version>
 		</dependency>
 		<!-- druid -->
 		<dependency>
@@ -83,7 +87,7 @@
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-boot-starter</artifactId>
-			<version>3.5.2</version>
+			<version>3.5.6</version>
 		</dependency>
 		<!-- mybatis-plus-generator -->
 		<dependency>
@@ -95,7 +99,7 @@
 		<dependency>
 			<groupId>cn.hutool</groupId>
 			<artifactId>hutool-all</artifactId>
-			<version>5.8.10</version>
+			<version>5.8.28</version>
 		</dependency>
 		<!-- easy poi -->
 		<dependency>
@@ -254,7 +258,7 @@
 		<dependency>
 			<groupId>com.suisung.shopsuite</groupId>
 			<artifactId>core</artifactId>
-			<version>1.0.1</version>
+			<version>1.0.27902</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
@@ -390,6 +394,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<skip>true</skip>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -405,6 +410,42 @@
 					<includeSystemScope>true</includeSystemScope>
 				</configuration>
 			</plugin>
+			<!-- Docker -->
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>${docker.maven.plugin.version}</version>
+				<!--如果想在项目打包时构建镜像添加-->
+				<executions>
+					<execution>
+						<id>build-image</id>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<!--定义镜像名称-->
+					<imageName>modulithshop/${project.artifactId}:${project.version}</imageName>
+					<!-- Docker 远程管理地址-->
+					<dockerHost>${docker.host}</dockerHost>
+					<!--定义基础镜像-->
+					<baseImage>java:8</baseImage>
+					<!--定义容器启动命令-->
+					<entryPoint>["java", "-jar", "-Xms128m", "-Xmx512m", "-XX:PermSize=64M", "-XX:MaxPermSize=512M", "-Dspring.profiles.active=prod", "-Duser.timezone=Asia/Shanghai", "/${project.build.finalName}.jar"]</entryPoint>
+					<!--推送镜像仓库校验安全证书，无安全证书无法推送-->
+					<dockerCertPath>E:\docker-ca</dockerCertPath>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
+				</configuration>
+			</plugin>
+			<!-- Docker end-->
 		</plugins>
 	</build>
 	<!--
@@ -415,4 +456,31 @@
 		</repository>
 	</repositories>
 	-->
+	<!-- 指定仓库为阿里云与阿帕奇 -->
+	<repositories>
+		<repository>
+			<id>ali-maven</id>
+			<url>https://maven.aliyun.com/repository/central</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>repo.maven.apache.org</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
